--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
       </div>
     </div>
     <div class="hero-image">
-      <img src="images/profile.jpg" alt="Khushi smiling" class="home-profile" />
+      <img src="profile.jpg" alt="Khushi smiling" class="home-profile" />
     </div>
   </section>
 
   <section id="about">
     <h2>About Me</h2>
     <div class="about-container">
-      <img src="images/profile.jpg" alt="Framed profile" class="about-profile" />
+      <img src="profile.jpg" alt="Framed profile" class="about-profile" />
       <p class="about-text">
         I'm a passionate web developer with a love for creating visually appealing and functional websites using HTML, CSS, and JavaScript.
       </p>
@@ -57,17 +57,17 @@
     <h2>Skills</h2>
     <div class="skills-layout">
       <div class="skill-card">
-        <img src="images/html-5.png" alt="HTML Icon" />
+        <img src="html-5.png" alt="HTML Icon" />
         <h4>HTML</h4>
         <p>Semantic, SEO-friendly structure</p>
       </div>
       <div class="skill-card">
-        <img src="images/css-3 (1).png" alt="CSS Icon" />
+        <img src="css-3 (1).png" alt="CSS Icon" />
         <h4>CSS</h4>
         <p>Responsive layouts, Flex/Grid</p>
       </div>
       <div class="skill-card">
-        <img src="images/javascript.png" alt="JavaScript Icon" />
+        <img src="javascript.png" alt="JavaScript Icon" />
         <h4>JavaScript</h4>
         <p>Interactive, dynamic user experience</p>
       </div>
@@ -78,14 +78,14 @@
     <h2>My Work</h2>
     <div class="projects">
       <div class="project">
-        <img src="images/project1.png" alt="Landing Page" />
+        <img src="project1.png" alt="Landing Page" />
         <div>
           <h3>Landing Page</h3>
           <p>Beautiful home decoration page using HTML and CSS.</p>
         </div>
       </div>
       <div class="project">
-        <img src="images/project2.png" alt="Portfolio" />
+        <img src="project2.png" alt="Portfolio" />
         <div>
           <h3>Portfolio Website</h3>
           <p>Responsive personal portfolio site with JavaScript interactivity.</p>
